--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,16 +1,27 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3>All Listings</h3>
-    <!-- <form method="GET" action="/listings/new">
-        <button>Add New Listing</button>
-    </form> -->
-    <ul>
-        <% for (let listing of allListing){ %>
-            <li><a href="/listings/<%= listing._id %>"><%= listing.title %></a></li>
-        <% } %>
-     </ul>
-</body>
 
+<h3>All Listings</h3>
 
-
-
+<div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1 g-4">
+    <% for (let listing of allListing){ %>
+        <a href="/listings/<%= listing._id %>" class="listing-link">
+            <div class="card col">
+            <div class="card h-100"> 
+                <img 
+                src="<%- listing.image.url %>" 
+                class="card-img-top" 
+                alt="listing_image"
+                />
+                <div class="card-img-overlay"></div>
+                <div class="card-body">
+                    <p class="card-text">
+                        <b><%= listing.title %></b> <br/>
+                        &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
+                    </p>
+                </div>
+            </div>
+        </div>
+    <% } %>
+</div>
+        </a>
+        
