--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,20 +1,58 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3>Add New Listing</h3>
-    <form method="POST" action="/listings">
-        <input type="text" name="listing[title]" placeholder="Title">
-        <br>
-        <textarea name="listing[description]" placeholder="Description"></textarea>
-        <br>
-        <input name="listing[image]" placeholder="Image URL" type="text">
-        <br>
-        <input type="number" name="listing[price]" placeholder="Price">
-        <br>
-        <input type="text" name="listing[location]" placeholder="Location">
-        <br>
-        <input type="text" name="listing[country]" placeholder="Country">
-        <br>
-        <button>Add Listing</button>
-    </form>
-    
-</body>
+<div class="row">
+    <div class="col-8 offset-2">
+    <body>
+        <br/><br/>
+        <h3>Add New Listing</h3>
+        
+        <form method="POST" action="/listings">
+            <div class="mb-3">
+                <label for ="title" class="form-label">Title</label>
+                <input type="text" name="listing[title]" placeholder="Add a catchy title" class="form-control"/>
+            </div>
+            
+            <div class="mb-3">
+                <label for ="description" 
+                class="form-label">Description</label>
+                <textarea 
+                    name="listing[description]" 
+                    class="form-control"
+                ></textarea>
+            </div>
+
+            <div class="mb-3">
+                <label for ="image" class="form-label">Image Link</label>
+                <input name="listing[image]" placeholder="Image URL" type="text" class="form-control"/>
+            </div>
+
+            <div class="row">
+                <div class="mb-3 col-md-4" >
+                    <label for ="price" class="form-label">Price</label>
+                    <input type="number" name="listing[price]" placeholder="1000" class="form-control"/>
+                </div>
+
+                <div class="mb-3 col-md-8" >
+                    <label for ="country" class="form-label">Country</label>
+                    <input type="text" name="listing[country]" placeholder="India"class="form-control"/>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label for ="location" class="form-label">Location</label>
+                <input type="text" name="listing[location]" placeholder="Odisha"
+                class="form-control"/>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            
+            <br /><br/>
+            <button class="btn btn-primary add-btn">Add Listing</button>
+        </form>
+        <br/><br/>
+        
+    </body>
+    </div>
+</div>
