--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,20 +1,36 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3>Listing Details</h3>
-    <ul>
-        <li>Title: <%= listing.title %></li>
-        <li>Description: <%= listing.description %></li>
-        <li>Price:&#8377 <%= listing.price.toLocaleString("en-IN") %></li>
-        <li>Location: <%= listing.location %></li>
-        <li>Country: <%= listing.country %></li>
+<div class="row">
+    
+    <div class="col-8 offset-2 mt-3">
+    <body>
         
-    </ul>
+        <h3>Listing Details</h3>
+        <div class="card col-12">
+            <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+            <div class="card-body">
+                <h5 class="card-title"><b><%= listing.title %></b></h5>
+                <p class="card-text"><%= listing.description %></p>
+            </div>
+            
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
+                <li class="list-group-item"><%= listing.location %></li>
+                <li class="list-group-item"><%= listing.country %></li>
+            </ul>
 
-    <br>
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
-    <br>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button>Delete Listing</button>
-    </form>
-
-</body>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-auto">
+                        <a href="/listings/<%= listing._id %>/edit" class="btn btn-primary">Edit</a>
+                    </div>
+                    <div class="col-auto">
+                        <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+    </div>
+</div>
