--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,11 +5,13 @@
         <br/><br/>
         <h3>Add New Listing</h3>
         
-        <form method="POST" action="/listings">
+        <form method="POST" action="/listings" novalidate class="needs-validation">
             <div class="mb-3">
                 <label for ="title" class="form-label">Title</label>
-                <input type="text" name="listing[title]" placeholder="Add a catchy title" class="form-control"/>
+                <input type="text" name="listing[title]" placeholder="Add a catchy title" class="form-control" required/>
+                <div class="valid-feedback">Looks good!</div>
             </div>
+            
             
             <div class="mb-3">
                 <label for ="description" 
@@ -17,7 +19,9 @@
                 <textarea 
                     name="listing[description]" 
                     class="form-control"
+                    required
                 ></textarea>
+                <div class="invalid-feedback">Please enter a short description!</div>
             </div>
 
             <div class="mb-3">
@@ -28,19 +32,22 @@
             <div class="row">
                 <div class="mb-3 col-md-4" >
                     <label for ="price" class="form-label">Price</label>
-                    <input type="number" name="listing[price]" placeholder="1000" class="form-control"/>
+                    <input type="number" name="listing[price]" placeholder="1000" class="form-control" required/>
+                    <div class="invalid-feedback">Price should be a number!</div>
                 </div>
 
                 <div class="mb-3 col-md-8" >
                     <label for ="country" class="form-label">Country</label>
-                    <input type="text" name="listing[country]" placeholder="India"class="form-control"/>
+                    <input type="text" name="listing[country]" placeholder="India"class="form-control" required/>
+                    <div class="invalid-feedback">Country should be valid</div>
                 </div>
             </div>
 
             <div class="mb-3">
                 <label for ="location" class="form-label">Location</label>
                 <input type="text" name="listing[location]" placeholder="Odisha"
-                class="form-control"/>
+                class="form-control" required/>
+                <div class="invalid-feedback">Location should be valid</div>
             </div>
 
             <div class="mb-3 form-check">
