--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="mb-3 col-md-4" >
                     <label for ="price" class="form-label">Price</label>
-                    <input type="number" name="listing[price]" value="<%= listing.price %>" class="form-control" required/>
+                    <input  name="listing[price]" value="<%= listing.price %>" class="form-control" required/>
                     <div class="invalid-feedback">Price should be a number!</div>
                 </div>
 
