--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,14 @@ body{
     text-decoration: underline;
 }
 
+.sticky-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 100;
+}
+
 .f-info-links,
 .f-info-socials,
 .f-info-brand{
