--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,15 +1,14 @@
-<footer>
+<footer class="<%= typeof footerClass !== 'undefined' ? footerClass : '' %>">
     <div class="f-info">
         <div class="f-info-socials">
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-square-linkedin"></i>
         </div>
-
-    
-    <div class ="f-info-brand">&copy Tripore Private Limited</div>
-    <div class="f-info-links">
-        <a href="/privacy">Privacy Policy</a>
-        <a href="/terms">Terms</a>
+        <div class="f-info-brand">&copy Tripore Private Limited</div>
+        <div class="f-info-links">
+            <a href="/privacy">Privacy Policy</a>
+            <a href="/terms">Terms</a>
+        </div>
     </div>
 </footer>
