--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,11 +4,11 @@
     <div class="col-8 offset-2 mt-3">
     <body>
         
-        <h3>Listing Details</h3>
+        <h3><%= listing.title %></h3>
         <div class="card col-12">
             <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
-                <h5 class="card-title"><b><%= listing.title %></b></h5>
+                
                 <p class="card-text"><%= listing.description %></p>
             </div>
             
@@ -26,6 +26,20 @@
                     <div class="col-auto">
                         <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
                             <button class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                    <div class="col-8 offset-3">
+                        <h4>Leave a Review</h4>
+                        <form>
+                            <div>
+                                <label for ="rating">Rating</label>
+                                <input type="range" min="1" max="5" id="rating" name="review[rating]">
+                            </div>
+                            <div>
+                                <label for ="comments">Comments</label>
+                                <textarea name="review[comment]" id="comment" cols="30" rows="10"></textarea>
+                            </div>
+                            <button>Submit</button>
                         </form>
                     </div>
                 </div>
