--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,7 +5,7 @@
 <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1 g-4">
     <% for (let listing of allListing){ %>
         <a href="/listings/<%= listing._id %>" class="listing-link">
-            <div class="card col">
+            <div class="card col listing-card">
             <div class="card h-100"> 
                 <img 
                 src="<%- listing.image.url %>" 
