--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,23 +1,17 @@
 <% layout("/layouts/boilerplate") %>
 <div class="row">
-    
     <div class="col-8 offset-2 mt-3">
-    <body>
-        
         <h3><%= listing.title %></h3>
-        <div class="card col-12">
+        <div class="card col-12 listing-card">
             <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
-                
                 <p class="card-text"><%= listing.description %></p>
             </div>
-            
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
                 <li class="list-group-item"><%= listing.location %></li>
                 <li class="list-group-item"><%= listing.country %></li>
             </ul>
-
             <div class="card-body">
                 <div class="row">
                     <div class="col-auto">
@@ -28,38 +22,38 @@
                             <button class="btn btn-danger">Delete</button>
                         </form>
                     </div>
-                    <div >
+                    <div class="left-align-section">
                         <hr>
                         <h4>Leave a Review</h4>
                         <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
                             <div class="mb-3 mt-3">
-                                <label for ="rating" class="form-label">Rating</label>
-                                <input 
-                                type="range" 
-                                min="1" 
-                                max="5" 
-                                id="rating" 
-                                name="review[rating]" 
-                                class="form-range">
+                                <label for="rating" class="form-label">Rating</label>
+                                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
                             </div>
                             <div class="mb-3 mt-3">
-                                <label for ="comments" class="form-label">Comments</label>
-                                <textarea 
-                                name="review[comment]" 
-                                id="comment" 
-                                cols="30" 
-                                rows="5" 
-                                class="form-control"
-                                required></textarea>
+                                <label for="comments" class="form-label">Comments</label>
+                                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
                                 <div class="invalid-feedback">Please enter a short description!</div>
                             </div>
                             <br>
                             <button class="btn btn-outline-dark">Submit</button>
                         </form>
+
+                        <hr/>
+                        <p><b>All Reviews</b></p>
+                        <div class="row">
+                            <% for(review of listing.reviews){ %>
+                                <div class="card col-5 ms-3 mb-3">
+                                    <div class="left-align-section">
+                                        <h5 class="card-title">Mukesh</h5>
+                                        <p class="card-text"><%= review.comment %></p>
+                                        <p class="card-text">Rating: <%= review.rating %> / 5</p>
+                                    </div>
+                                </div>
+                            <% } %>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </body>
-    </div>
 </div>
+        </div>
+    </div>
