--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,11 @@
-<footer class="<%= typeof footerClass !== 'undefined' ? footerClass : '' %>">
-    <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-square-linkedin"></i>
-        </div>
-        <div class="f-info-brand">&copy Tripore Private Limited</div>
-        <div class="f-info-links">
-            <a href="/privacy">Privacy Policy</a>
-            <a href="/terms">Terms</a>
-        </div>
+<footer class="<%= footerClass %>">
+  <div class="container">
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
     </div>
+    <p>© Tripore Private Limited</p>
+    <a href="#">Privacy Policy</a> | <a href="#">Terms</a>
+  </div>
 </footer>
