--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -14,7 +14,7 @@
                 alt="listing_image"
                 />
                 <div class="card-img-overlay"></div>
-                <div class="card-body">
+                <div class="card-body ms-3">
                     <p class="card-text">
                         <b><%= listing.title %></b> <br/>
                         &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
