--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -11,10 +11,12 @@
                     <%= listing.description %></p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
+                <li class="list-group-item">&#8377; <%= listing.price.toLocaleString("en-IN") %>/night</li>
                 <li class="list-group-item"><%= listing.location %></li>
                 <li class="list-group-item"><%= listing.country %></li>
             </ul>
+
+            <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
             
             <div class="card-body">
                 <div class="row mb-3">
@@ -27,12 +29,20 @@
                         </form>
                     </div>
                 </div>
+                <% } %>
+
+               
                 
                 <!-- Review Section: left-aligned and inside the card -->
                 <div class="left-align-section ms-3 me-3">
                     <hr>
+                    <% if(currUser){ %>
                     <h4>Leave a Review</h4>
-                    <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
+                    <form 
+                    action="/listings/<%= listing.id %>/reviews" 
+                    method="POST" 
+                    novalidate 
+                    class="needs-validation">
                         <div class="mb-3 mt-3 ">
                             <label for="rating" class="form-label">Rating</label>
                             <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
@@ -44,13 +54,14 @@
                         </div>
                         <button class="btn btn-primary">Submit</button>
                     </form>
+                    <% } %>
                     <hr/>
                     <p><b>All Reviews</b></p>
                     <div class="row">
                         <% for(review of listing.reviews){ %>
                             <div class="card col-5 ms-3 mb-3">
                                 <div class="left-align-section">
-                                    <h5 class="card-title">Mukesh</h5>
+                                    <h5 class="card-title">@<%= review.author.username %></h5>
                                     <p class="card-text"><%= review.comment %></p>
                                     <p class="card-text">Rating: <%= review.rating %> / 5</p>
                                 </div>
