--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,8 +4,11 @@
     <body>
         <br/><br/>
         <h3>Add New Listing</h3>
-        
-        <form method="POST" action="/listings" novalidate class="needs-validation">
+        <form 
+        method="POST" 
+        action="/listings" 
+        novalidate class="needs-validation" 
+        enctype="multipart/form-data">
             <div class="mb-3">
                 <label for ="title" class="form-label">Title</label>
                 <input type="text" name="listing[title]" placeholder="Add a catchy title" class="form-control" required/>
@@ -25,8 +28,8 @@
             </div>
 
             <div class="mb-3">
-                <label for ="image" class="form-label">Image Link</label>
-                <input name="listing[image]" placeholder="Image URL" type="text" class="form-control"/>
+                <label for ="image" class="form-label">Upload Image</label>
+                <input name="listing[image]" type="file" class="form-control"/>
             </div>
 
             <div class="row">
