--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -20,6 +20,11 @@
             </div>
 
             <div class="mb-3">
+                Original Listing Image <br/>
+                <img src="<%= originalImageUrl %>" alt="Listing Image" style="max-width: 200px; max-height: 200px;"/>
+            </div>
+
+            <div class="mb-3">
                 <label for ="image" class="form-label">Upload New Image</label>
                 <input name="listing[image]"  type="file" class="form-control"/>
             </div>
