--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -21,7 +21,7 @@
 </style>
 
 
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-md navbar-light bg-white border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"><i class="fa-solid fa-location-arrow"></i></a>
     <button class="navbar-toggler" 
@@ -31,7 +31,7 @@
     >
     <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse bg-white" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         
         <a class="nav-link" href="/listings"><b>Explore</b></a>
